--- a/shortcuts/cncjs.Desktop
+++ b/shortcuts/cncjs.Desktop
@@ -4,6 +4,6 @@ Version=1.0
 Comment=Launches application
 Exec=/home/pi/.npm/bin/cnc
 Icon=/usr/share/pixmaps/openbox.xpm
-Terminal=false
+Terminal=true
 Type=Application
 Categories=Education
