--- a/scripts/wip/WebAVRFlasher/package.json
+++ b/scripts/wip/WebAVRFlasher/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.4.1",
     "express": "^4.13.4",
     "mocha": "^2.4.5",
+    "multer": "^1.1.0",
     "nodemon": "^1.9.1",
     "request": "^2.71.0"
   }
