--- a/shortcuts/Arduino.Desktop
+++ b/shortcuts/Arduino.Desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Arduino 1.6.10
 Comment=Arduino 1.6.10
 Exec=/home/pi/arduino-1.6.10/arduino
-Icon=bCNC.png
+Icon=lib/icons/32x32/apps/arduino.png
 Terminal=false
 StartupNotify=false
 Name[en_US]=Arduino
