--- a/shortcuts/ProtoneerForum.Desktop
+++ b/shortcuts/ProtoneerForum.Desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Protoneer Forums
 Comment=Protoneer Forums
-Exec=epiphany http://example.com &
+Exec=epiphany http://forum.protoneer.co.nz
 Icon=lib/icons/32x32/apps/arduino.png
 Terminal=false
 StartupNotify=false
