--- a/shortcuts/Arduino.Desktop
+++ b/shortcuts/Arduino.Desktop
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Version=1.0
 Type=Application
-Name=Arduino 1.6.10
-Comment=Arduino 1.6.10
-Exec=/home/pi/arduino-1.6.10/arduino
+Name=Arduino IDE
+Comment=Arduino IDE
+Exec=/home/pi/arduino-1.8.1/arduino
 Icon=lib/icons/32x32/apps/arduino.png
 Terminal=false
 StartupNotify=false
