--- a/shortcuts/UpdateFirmware/Upload-GRBL-Latest.Desktop
+++ b/shortcuts/UpdateFirmware/Upload-GRBL-Latest.Desktop
@@ -1,1 +1,7 @@
-
+[Desktop Entry]
+Name=Upload-GRBL-Latest
+Version=1.0
+Comment=Upload-GRBL-Latest
+Exec=/home/pi/.npm/bin/cnc
+Terminal=true
+Type=Application
