--- a/resources/shortcuts/LaserWeb3.Desktop
+++ b/resources/shortcuts/LaserWeb3.Desktop
@@ -3,5 +3,5 @@ Version=1.0
 Type=Application
 Name=LaserWeb3 Server
 Comment=LaserWeb3 Server
-Exec=node /home/pi/LaserWeb3/server.js
+Exec=/home/pi/RPI-CNC-Config-Scripts/resources/scripts/RunLaserWeb3.sh
 Terminal=true
