Fixed bCNC shortcut

--- a/resources/shortcuts/bCNC.desktop
+++ b/resources/shortcuts/bCNC.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=bCNC
 Comment=bCNC Controller
-Exec=/home/pi/bCNC/bCNC
+Exec=bCNC
 Icon=bCNC.png
 Terminal=false
 StartupNotify=false
